# warchief

./: .env  .gitignore  Cargo.toml  TODO  build.rs  config.toml.tmpl  docker-compose.yml
assets/: main.css
migrations/: 20231113215850_login-attempts.sql
src/: config.rs  consts.rs  crypto.rs  db.rs  email.rs  errors.rs  geolocate.rs  main.rs  recaptcha.rs  state.rs  structs.rs  templates.rs
src/controllers/: login.rs
src/routes/: account.rs  forms.rs  mod.rs  validate.rs
templates/: account.html  banned.html  base.html  change_password.html  error.html  form.html  login.html  register.html  register_old.html  validation_response.html  verify.html
